# family_album

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/family_album/: main.py
src/family_album/gui/: application.py  dataframe_model.py  main_window.py
src/family_album/gui/py_ui/: main_window.py  main_window.ui
src/family_album/gui/widgets/: directory_view.py  duplication_checker.py  file_organizer.py
src/family_album/gui/widgets/py_ui/: directory_view.py  directory_view.ui  duplication_checker_ui.py  file_organizer_ui.py
src/family_album/utility_functions/: analyze_directory.py  database_manager.py  file_utils.py  find_duplicate_files.py  find_duplicate_files_async.py  find_duplicate_files_multythreaded.py  image_utils.py  organize_media.py  video_utils.py
src/family_album_lib/: create_logger.py  directory_analyser.py  duplicate_file_analyser.py
src/gui/: application.py  main_window.py
src/gui/py_ui/: main_window.ui
src/gui/widgets/: directory_view.py  duplication_checker.py  file_organizer.py  file_view.py
src/gui/widgets/py_ui/: file_organizer.ui  file_organizer_ui.ui  files_view.ui
src/utility_functions/: C:\Users\Oleksander\duplicates_async.txt  analyze_directory.py  database_manager.py  database_settings.py  file_utils.py  find_duplicate_files.py  find_duplicate_files_async.py  get_files_and_subdirs_count.py  image_utils.py  is_file_image_cv.py  is_file_image_pil.py  is_file_video.py  video_utils.py
tests/: test_database_manager.py  test_find_duplication.py  test_image_utils.py  test_video_utils.py
