[tool.poetry]
name = "famuly_album"
version = "0.0.1"
description = ""
authors = ["Oleksander Shevchenko <oleksander.shevchenko777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0, <3.12.0"
pandas = ">=2.0"
pillow = "^9.4"
opencv-python = "^4.7.0.68"
PyQt5 = ">=5.15"
PyQt5-stubs = ">5.15"
pyqt5-sip = "<12.12"
requests = "^2.28.1"
toml = "^0.10.2"
psycopg2 = "^2.1"

[tool.poetry.dev-dependencies]
ipython = "^7.34.0"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
flake8-junit-report = "^2.1.0"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
Sphinx = "5.1.1"
sphinx-rtd-theme = "^1.0.0"
cx-freeze = "6.14.7"
nox = "2022.11.21"
nox-poetry = "^1.0.2"
invoke = "^2.0.0"
pyinstaller = "^5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
